	PR c++/51060 	* gimplify.c (gimplify_target_expr): Add a clobber to the cleanup. 	(gimplify_modify_expr): Don't try to simplify it. 	* cp/cp-gimplify.c (cp_gimplify_expr): Leave clobbers alone.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181332 138bc75d-0d04-0410-961f-82ee72b054a4