libstdc++-v3/testsuite/25_algorithms/min/1.cc
@@ -25,13 +25,13 @@ void test01()
 {
   bool test __attribute__((unused)) = true;
 
-  const int& z = std::min(1, 2);
-  const int& w = std::min(4, 3);
+  const int z = std::min(1, 2);
+  const int w = std::min(4, 3);
   VERIFY( z == 1 );
   VERIFY( w == 3 );
 
-  const int& zc = std::min(1, 2, std::greater<int>());
-  const int& wc = std::min(4, 3, std::greater<int>());
+  const int zc = std::min(1, 2, std::greater<int>());
+  const int wc = std::min(4, 3, std::greater<int>());
   VERIFY( zc == 2 );
   VERIFY( wc == 4 );
 }
