libstdc++-v3/testsuite/25_algorithms/minmax/1.cc
@@ -27,15 +27,15 @@ void test01()
 {
   bool test __attribute__((unused)) = true;
 
-  std::pair<const int&, const int&> z = std::minmax(1, 2);
-  std::pair<const int&, const int&> w = std::minmax(4, 3);
+  std::pair<const int, const int> z = std::minmax(1, 2);
+  std::pair<const int, const int> w = std::minmax(4, 3);
   VERIFY( z.first == 1 );
   VERIFY( z.second == 2 );
   VERIFY( w.first == 3 );
   VERIFY( w.second == 4 );
 
-  std::pair<const int&, const int&> zc = std::minmax(1, 2, std::greater<int>());
-  std::pair<const int&, const int&> wc = std::minmax(4, 3, std::greater<int>());
+  std::pair<const int, const int> zc = std::minmax(1, 2, std::greater<int>());
+  std::pair<const int, const int> wc = std::minmax(4, 3, std::greater<int>());
   VERIFY( zc.first == 2 );
   VERIFY( zc.second == 1 );
   VERIFY( wc.first == 4 );
